--- a/sunnyhilltech/src/app/modules/login/login.component.html
+++ b/sunnyhilltech/src/app/modules/login/login.component.html
@@ -1,3 +1,32 @@
-<p>
-  login works!
-</p>
+<div class="card-body d-grid justify-content-center">
+  <h1 class="d-flex justify-content-center mt-5">Log in </h1>
+  <form 
+  class="mt-8"
+  [formGroup]="signInForm"
+  #signInNgForm="ngForm"
+  >
+  <!-- Email field -->
+  <mat-form-field class="w-full">
+    <mat-label>Email</mat-label>
+    <input id="username" matInput [formControlName]="'username'">
+    <mat-error *ngIf="signInForm.get('username').hasError('required')">Email address is required</mat-error>
+    <mat-error *ngIf="signInForm.get('username').hasError('email')">Please enter a valid email address</mat-error>
+  </mat-form-field>
+  <br>
+  <!-- Password Field -->
+  <mat-form-field class="w-full">
+  <mat-label>Password</mat-label>
+  <input id="password" matInput type="password"[formControlName]="'password'"#passwordField >
+  <mat-error *ngIf="signInForm.get('password').hasError('required')">
+    Password is required
+  </mat-error>
+  <mat-error *ngIf="signInForm.get('password').hasError('minLength')">
+    Choose a password with at least 8 characters.
+  </mat-error>
+  </mat-form-field>
+  <div class="d-grid justify-content-center">
+    <button (click)="signIn()"mat-flat-button color="primary">Log in</button>
+    <p><a routerLink="/sign-up" routerLinkActive="active">Dont have an account?</a></p>
+  </div>
+  </form>
+</div>
