--- a/sunnyhilltech/src/app/modules/signup/signup.component.html
+++ b/sunnyhilltech/src/app/modules/signup/signup.component.html
@@ -1,3 +1,57 @@
-<p>
-  signup works!
-</p>
+<div class="card-body d-grid justify-content-center">
+  <h1 class="d-flex justify-content-center">Sign Up</h1>
+  <form class="mt-8"
+  [formGroup]="signUpForm"
+  #registerNgForm="ngForm"
+  >
+  <mat-form-field class="w-full">
+    <mat-label>Name:</mat-label>
+    <input type="text" id="username" matInput [formControlName]="'name'">
+    <mat-error *ngIf="signUpForm.get('name')?.hasError('required')">Username is required</mat-error>
+  </mat-form-field>
+  <br>
+  <mat-form-field class="w-full">
+    <mat-label>Email:</mat-label>
+    <input type="text" id="email" matInput [formControlName]="'email'">
+    <mat-error *ngIf="signUpForm.get('email')?.hasError('required')">Email is required</mat-error>
+  </mat-form-field>
+  <br>
+  
+  <mat-form-field class="w-full">
+    <mat-label>Password:</mat-label>
+    <input type="password" id="username" matInput [formControlName]="'password'">
+    <mat-error *ngIf="signUpForm.get('password')?.hasError('required')">password is required</mat-error>
+  </mat-form-field>
+  <br>
+  
+  <mat-form-field class="w-full">
+    <mat-label>Phone:</mat-label>
+    <input type="number" id="phone" matInput [formControlName]="'phone'"> 
+    <mat-error *ngIf="signUpForm.get('phone')?.hasError('required')">phone is required</mat-error>
+  </mat-form-field>
+  <br>
+  
+  <mat-form-field class="w-full">
+    <mat-label>Birthday:</mat-label>
+    <input type="date" id="birthday" matInput [formControlName]="'birthday'">
+    <mat-error *ngIf="signUpForm.get('birthday')?.hasError('required')">Birthday is required</mat-error>
+  </mat-form-field>
+  <br>
+  
+    <mat-radio-group id="gender" aria-label="Select an option" [formControlName]="'gender'">
+      <mat-radio-button value="Male">Male</mat-radio-button>
+      <mat-radio-button value="Female">Female</mat-radio-button>
+    </mat-radio-group>
+    <br>
+  
+  <mat-form-field class="w-full">
+    <mat-label>Addres:</mat-label>
+    <input type="text" id="addres" matInput [formControlName]="'addres'">
+    <mat-error *ngIf="signUpForm.get('addres')?.hasError('required')">Addres is required</mat-error>
+  </mat-form-field>
+  <div class="d-flex justify-content-center">
+    <button (click)="signUp()"mat-flat-button color="primary">Sign Up</button>
+    <p><a routerLink="/log-in" routerLinkActive="active">Already have an account</a></p>
+  </div>
+  </form>
+</div>
