--- a/sunnyhilltech/src/app/profile/user-products/user-products.component.html
+++ b/sunnyhilltech/src/app/profile/user-products/user-products.component.html
@@ -1,1 +1,33 @@
-<h1>21</h1>
+<div id="app">
+    <nav class="navbar navbar-expand navbar-dark bg-dark">
+      <a href="#" class="navbar-brand">Task</a>
+      <ul class="navbar-nav mr-auto" routerLinkActive="active">
+        <li class="nav-item">
+          <a href="/products" class="nav-link" routerLink="home">Products</a>
+        </li>
+      </ul>
+      <ul class="navbar-nav ml-auto" >
+         <a routerLink="/edit-profile"class="nav-link">Edit profile</a>
+      </ul>
+      <ul class="navbar-nav ml-auto" >
+        <li class="nav-item">
+          <a href="/profile" class="nav-link" routerLink="profile"></a>
+        </li>
+        <li class="nav-item">
+          <a href class="nav-link" (click)="logOut()">LogOut</a>
+        </li>
+      </ul>
+    </nav>
+
+
+
+    <div class="row d-flex justify-content-center">
+        <div class="card col-lg-6 " style="width: 18rem;" *ngFor="let prod of products">
+                <img class="card-img-top" src={{prod.image}} alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title">name:{{prod.name}}</h5>
+                  <p class="card-text">Category:{{prod.category}}</p>
+                  <a href="#" class="btn btn-primary">Price:{{prod.price}}$</a>
+                </div>
+          </div>
+    </div>
