--- a/src/app/profile/user-products/user-products.component.html
+++ b/src/app/profile/user-products/user-products.component.html
@@ -1,20 +1,20 @@
 <div id="app">
     <nav class="navbar navbar-expand navbar-dark bg-dark">
-      <a href="#" class="navbar-brand">Task</a>
+      <a [routerLink]="['/']"  class="navbar-brand">Task</a>
       <ul class="navbar-nav mr-auto" routerLinkActive="active">
         <li class="nav-item">
-          <a href="/products" class="nav-link" routerLink="home">Products</a>
+          <a  [routerLink]="['/products']"  class="nav-link" routerLink="home">Products</a>
         </li>
       </ul>
       <ul class="navbar-nav ml-auto" >
-         <a routerLink="/edit-profile"class="nav-link">Edit profile</a>
+         <a  [routerLink]="['/edit-profile']" class="nav-link">Edit profile</a>
       </ul>
       <ul class="navbar-nav ml-auto" >
         <li class="nav-item">
-          <a href="/profile" class="nav-link" routerLink="profile"></a>
+          <a [routerLink]="['/profile']" routerLinkActive="router-link-active" class="nav-link" routerLink="profile"></a>
         </li>
         <li class="nav-item">
-          <a href class="nav-link" (click)="logOut()">LogOut</a>
+          <a  class="nav-link" (click)="logOut()" style="cursor: pointer;">LogOut</a>
         </li>
       </ul>
     </nav>
