--- a/src/app/modules/login/login.component.html
+++ b/src/app/modules/login/login.component.html
@@ -26,6 +26,7 @@
   </mat-form-field>
   <div class="d-grid justify-content-center">
     <button (click)="signIn()"mat-flat-button color="primary">Log in</button>
+    <p><a routerLink="/find-account" routerLinkActive="active">Forgot password</a></p>
     <p><a routerLink="/sign-up" routerLinkActive="active">Dont have an account?</a></p>
   </div>
   </form>
