--- a/src/app/profile/edit-profile/edit-profile.component.html
+++ b/src/app/profile/edit-profile/edit-profile.component.html
@@ -9,6 +9,11 @@
     <ul class="navbar-nav ml-auto" >
        <a routerLink="/edit-profile" routerLinkActive="active"  class="nav-link">Edit profile</a>
     </ul>
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item">
+        <a [routerLink]="['/user-list']" routerLinkActive="router-link-active" class="nav-link" routerLink="profile">User list</a>
+      </li>
+    </ul>
     <ul class="navbar-nav ml-auto" >
       <li class="nav-item">
         <a [routerLink]="['/profile']" routerLinkActive="router-link-active" class="nav-link" routerLink="profile"></a>
