--- a/src/app/modules/login/login.component.html
+++ b/src/app/modules/login/login.component.html
@@ -1,11 +1,10 @@
-<div class="card-body d-grid justify-content-center">
+<!-- <div class="card-body d-grid justify-content-center">
   <h1 class="d-flex justify-content-center mt-5">Log in </h1>
   <form 
   class="mt-8"
   [formGroup]="signInForm"
   #signInNgForm="ngForm"
   >
-  <!-- Email field -->
   <mat-form-field class="w-full">
     <mat-label>Email</mat-label>
     <input id="username" matInput [formControlName]="'username'">
@@ -13,7 +12,6 @@
     <mat-error  *ngIf="signInForm.get('username')?.hasError('email')">Please enter a valid email address</mat-error>
   </mat-form-field>
   <br>
-  <!-- Password Field -->
   <mat-form-field class="w-full">
   <mat-label>Password</mat-label>
   <input id="password" matInput type="password"[formControlName]="'password'"#passwordField >
@@ -30,4 +28,39 @@
     <p><a routerLink="/sign-up" routerLinkActive="active">Dont have an account?</a></p>
   </div>
   </form>
+</div> -->
+
+
+<mat-card>
+  <mat-card-title style="color:#3f51b5;">Login</mat-card-title>
+<mat-card-content>
+<form   [formGroup]="signInForm"
+#signInNgForm="ngForm">
+<p>
+  <mat-form-field>
+    <input type="email" matInput placeholder="Email" [formControlName]="'username'">
+    <mat-error  *ngIf="signInForm.get('username')?.hasError('required')">Email address is required</mat-error>
+    <mat-error  *ngIf="signInForm.get('username')?.hasError('email')">Please enter a valid email address</mat-error>
+  </mat-form-field>
+</p>
+
+<p>
+  <mat-form-field>
+    <input type="password" matInput placeholder="Password" [formControlName]="'password'"#passwordField >
+    <mat-error  role="alert" *ngIf="signInForm.get('password')?.hasError('minLength')">
+      Choose a password with at least 8 characters.
+    </mat-error>
+  </mat-form-field>
+</p>
+
+
+
+<div class="button d-flex justify-content-center">
+  <button mat-flat-button color="primary" (click)="signIn()" type="submit" >Login</button>
 </div>
+<p class="d-flex justify-content-center"><a routerLink="/sign-up" routerLinkActive="active">Dont have an account?</a></p>
+<p class="d-flex justify-content-center"><a routerLink="/find-account" routerLinkActive="active">Forgot password</a></p>
+
+</form>
+</mat-card-content>
+</mat-card>
