--- a/src/app/modules/signup/signup.component.html
+++ b/src/app/modules/signup/signup.component.html
@@ -1,9 +1,10 @@
-<div class="card-body d-grid justify-content-center">
-  <h1 class="d-flex justify-content-center">Sign Up</h1>
-  <form class="mt-8"
-  [formGroup]="signUpForm"
-  #registerNgForm="ngForm"
-  >
+
+<mat-card>
+  <mat-card-title style="color:#3f51b5;">Sign up</mat-card-title>
+<mat-card-content>
+<form   [formGroup]="signUpForm"
+#registerNgForm="ngForm">
+<p>
   <mat-form-field class="w-full">
     <mat-label>Name:</mat-label>
     <input type="text" id="username" matInput [formControlName]="'name'">
@@ -49,9 +50,10 @@
     <input type="text" id="addres" matInput [formControlName]="'addres'">
     <mat-error *ngIf="signUpForm.get('addres')?.hasError('required')">Addres is required</mat-error>
   </mat-form-field>
-  <div class="d-flex justify-content-center">
-    <button (click)="signUp()"mat-flat-button color="primary">Sign Up</button>
-    <p><a routerLink="/log-in" routerLinkActive="active">Already have an account</a></p>
-  </div>
-  </form>
+<div class="button  d-flex justify-content-center">
+  <button (click)="signUp()"mat-flat-button color="primary">Sign Up</button>
 </div>
+<p class="d-flex justify-content-center"><a routerLink="/log-in" routerLinkActive="active">Already have an account</a></p>
+</form>
+</mat-card-content>
+</mat-card>
