--- a/src/app/profile/user-products/user-products.component.html
+++ b/src/app/profile/user-products/user-products.component.html
@@ -27,11 +27,11 @@
 
 
 
-    <div class="row d-flex justify-content-center">
-        <div class="card col-lg-6 " style="width: 18rem;" *ngFor="let prod of products">
+    <div class="row d-flex justify-content-center mt-5 ">
+        <div class="card col-3 " style="width: 18rem; margin-right: 20px;" *ngFor="let prod of products">
                 <img class="card-img-top" src={{prod.image}} alt="Card image cap">
                 <div class="card-body">
-                  <h5 class="card-title">name:{{prod.name}}</h5>
+                  <h5 class="card-title">Name:{{prod.name}}</h5>
                   <p class="card-text">Category:{{prod.category}}</p>
                   <a href="#" class="btn btn-primary">Price:{{prod.price}}$</a>
                 </div>
