--- a/src/app/profile/users/user-edit/users-edit.component.html
+++ b/src/app/profile/users/user-edit/users-edit.component.html
@@ -1,26 +1,34 @@
 <div class="container mt-4">
   <h3>{{header}}</h3>
 
-  <form (submit)="saveUser(UserForm.value)" #UserForm="ngForm">
-    <div class="form-group">
+  <form (submit)="saveUser(id,UserForm.value)" #UserForm="ngForm">
+    <!-- <div class="form-group">
       <label for="">Id</label>
       <input type="text" class="form-control" ([ngModel])="user.id"  #id="ngModel" ngModel name="id">
-    </div>
+    </div> -->
     <div class="form-group">
       <label for="">Name</label>
-      <input type="text" class="form-control" ([ngModel])="user.name" #name="ngModel" ngModel name="name">
+      <input type="text" class="form-control" ([ngModel])="user.name" #name="ngModel" ngModel name="name" [value]="user.name">
     </div>
     <div class="form-group">
       <label for="">Email</label>
-      <input type="text" class="form-control" ([ngModel])="user.email" #email="ngModel" ngModel name="email">
+      <input type="text" class="form-control" ([ngModel])="user.email" #email="ngModel" ngModel name="email" [value]="user.email">
     </div>
     <div class="form-group">
       <label for="">Phone</label>
-      <input type="text" class="form-control" ([ngModel])="user.phone" #phone="ngModel" ngModel name="phone">
+      <input type="text" class="form-control" ([ngModel])="user.phone" #phone="ngModel" ngModel name="phone" [value]="user.phone">
     </div>
     <div class="form-group">
-      <label for="">Salary</label>
-      <input type="text" class="form-control" ([ngModel])="user.salary" #salary="ngModel" ngModel name="salary">
+      <label for="">birthday</label>
+      <input type="date"   ([ngModel])="user.birthday" #salary="ngModel" ngModel name="salary" [value]="user.birthday">
+    </div>
+      <mat-radio-group id="gender" aria-label="Select an option" class="form-control" #gender="ngModel" ngModel  ([ngModel])="user.gender" [value]="user.gender" >
+        <mat-radio-button value="Male">Male</mat-radio-button>
+        <mat-radio-button value="Female">Female</mat-radio-button>
+      </mat-radio-group>
+    <div class="form-group">
+      <label for="">Addres</label>
+      <input type="text"  ([ngModel])="user.addres" #addres="ngModel" ngModel name="addres" [value]="user.addres ">
     </div>
     <div class="form-group">
       <button class="btn btn-primary" type="submit">Save</button>
