a lot of changes

--- a/src/app/modules/login/login.component.html
+++ b/src/app/modules/login/login.component.html
@@ -59,7 +59,7 @@
   <button mat-flat-button color="primary" (click)="signIn()" type="submit" >Login</button>
 </div>
 <p class="d-flex justify-content-center"><a routerLink="/sign-up" routerLinkActive="active">Dont have an account?</a></p>
-<p class="d-flex justify-content-center"><a routerLink="/find-account" routerLinkActive="active">Forgot password</a></p>
+<!-- <p class="d-flex justify-content-center"><a routerLink="/find-account" routerLinkActive="active">Forgot password</a></p> -->
 
 </form>
 </mat-card-content>
