--- a/src/app/profile/user-products/user-products.component.css
+++ b/src/app/profile/user-products/user-products.component.css
@@ -7,3 +7,17 @@
     align-items: center;
     align-content: center;
 }
+.card{
+    padding: 20px;
+    margin: 50px;
+}
+.card img {
+    width: 200px;
+    height: 200px;
+    margin-bottom: 15px;
+    transition: 0.3s ease-in-out;
+}
+.card img:hover{
+    transition: 0.3s ease-in-out;
+    transform: scale(1.0);
+}
