--- a/src/app/profile/users/user-edit/users-edit.component.html
+++ b/src/app/profile/users/user-edit/users-edit.component.html
@@ -1,37 +1,69 @@
-<div class="container mt-4">
-  <h3>{{header}}</h3>
 
-  <form (submit)="saveUser(id,UserForm.value)" #UserForm="ngForm">
-    <!-- <div class="form-group">
-      <label for="">Id</label>
-      <input type="text" class="form-control" ([ngModel])="user.id"  #id="ngModel" ngModel name="id">
-    </div> -->
-    <div class="form-group">
-      <label for="">Name</label>
-      <input type="text" class="form-control" ([ngModel])="user.name" #name="ngModel" ngModel name="name" [value]="user.name">
-    </div>
-    <div class="form-group">
-      <label for="">Email</label>
-      <input type="text" class="form-control" ([ngModel])="user.email" #email="ngModel" ngModel name="email" [value]="user.email">
-    </div>
-    <div class="form-group">
-      <label for="">Phone</label>
-      <input type="text" class="form-control" ([ngModel])="user.phone" #phone="ngModel" ngModel name="phone" [value]="user.phone">
-    </div>
-    <div class="form-group">
-      <label for="">birthday</label>
-      <input type="date"   ([ngModel])="user.birthday" #salary="ngModel" ngModel name="salary" [value]="user.birthday">
-    </div>
-      <mat-radio-group id="gender" aria-label="Select an option" class="form-control" #gender="ngModel" ngModel  ([ngModel])="user.gender" [value]="user.gender" >
-        <mat-radio-button value="Male">Male</mat-radio-button>
-        <mat-radio-button value="Female">Female</mat-radio-button>
-      </mat-radio-group>
-    <div class="form-group">
-      <label for="">Addres</label>
-      <input type="text"  ([ngModel])="user.addres" #addres="ngModel" ngModel name="addres" [value]="user.addres ">
-    </div>
-    <div class="form-group">
-      <button class="btn btn-primary" type="submit">Save</button>
-    </div>
-  </form>
+<mat-card class="">
+  <mat-card-title style="color:#3f51b5;">{{header}}</mat-card-title>
+<mat-card-content>
+<form  (submit)="saveUser(id,UserForm.value)" #UserForm="ngForm">
+<p>
+  <mat-form-field>
+      <mat-label for="">Name</mat-label>
+      <input matInput  type="text" class="form-control" ([ngModel])="user.name" #name="ngModel" ngModel name="name" [value]="user.name">
+  </mat-form-field>
+</p>
+
+<p>
+  <mat-form-field>
+      <mat-label for="">Email</mat-label>
+      <input matInput type="text" class="form-control" ([ngModel])="user.email" #email="ngModel" ngModel name="email" [value]="user.email">
+  </mat-form-field>
+</p>
+
+
+<p>
+  <mat-form-field>
+      <mat-label for="">Password</mat-label>
+      <input matInput  type="password" class="form-control" ([ngModel])="user.password" #password="ngModel" ngModel name="password" [value]="user.password">
+  </mat-form-field>
+</p>
+
+<p>
+  <mat-form-field>
+      <mat-label for="">Phone</mat-label>
+      <input matInput  type="text" class="form-control" ([ngModel])="user.phone" #phone="ngModel" ngModel name="phone" [value]="user.phone">
+  </mat-form-field>
+</p>
+
+<p>
+  <mat-form-field>
+      <mat-label for="">Birthday</mat-label>
+      <br>
+      <input type="date" matInput   ([ngModel])="user.birthday" #birthday="ngModel" ngModel name="birthday" [value]="user.birthday">
+  </mat-form-field>
+</p>
+
+<p>
+    <mat-radio-group ([ngModel])="user.gender" #gender="ngModel" ngModel name="gender" [value]="user.gender">
+      <mat-radio-button value="Male">Male</mat-radio-button>
+      <mat-radio-button value="Female">Female</mat-radio-button>
+    </mat-radio-group>
+</p>
+
+<p>
+  <mat-form-field>
+      <mat-label for="">Addres</mat-label>
+      <br>
+      <input type="text" matInput  ([ngModel])="user.addres" #addres="ngModel" ngModel name="addres" [value]="user.addres ">
+  </mat-form-field>
+</p>
+
+
+
+<div class="button d-flex justify-content-center">
+  <div class="form-group">
+    <button class="btn btn-primary" type="submit">Save</button>
+  </div>
 </div>
+</form>
+</mat-card-content>
+</mat-card>
+
+
