--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,13 +1,13 @@
-<ng-container *ngIf="false">
+<ng-container *ngIf="product.length === 0">
   <div class="container">
     <div class="card">
-      <h5 class="card-title">MY cart</h5>
+      <h5 class="card-title">My cart</h5>
     </div>
     <div class="center">
       <img src="https://cdn3.iconfinder.com/data/icons/shopping-and-ecommerce-28/90/empty_cart-512.png" alt="">
       <h4>Your cart is empty!</h4>
       <h6>Add item to it now</h6>
-    <button mat-raised-button color="primary"
+    <button routerLink="/products" mat-raised-button color="primary"
     >
     Shop now
   </button>
@@ -15,41 +15,48 @@
   </div>
 </ng-container>
 
-<ng-container *ngIf="true">
-<div class="container">
-  <div class="card-table">
-    <div class="cart-product">
-      <table class="table table-responsive">
-        <thead>
-          <tr>
-            <th>No.</th>
-            <th>Product Name</th>
-            <th>Product Image</th>
-            <th>Product Category</th>
-            <th>Price</th>
-            <th>Quanty</th>
-            <th>Total</th>
-            <th>Action</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>1</td>
-            <td>Iphone</td>
-            <td>Some image</td>
-            <td>This is brande phone</td>
-            <td>This is branded phone</td>
-            <td>This is branded phone</td>
-            <td>This is branded phone</td>
-            <td>
-              <button mat-raised-button color="warn"><mat-icon>
-                delete_forever
-              </mat-icon></button>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-    </div>
-</div>
-</ng-container>
+<table *ngIf="product.length !=0" mat-table [dataSource]="product" class="mat-elevation-z8">
+  <ng-container matColumnDef="name">
+    <th mat-header-cell *matHeaderCellDef>Name</th>
+    <td class="longName" mat-cell *matCellDef="let element"> {{ element.title }} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="Image">
+    <th mat-header-cell *matHeaderCellDef>Image</th>
+    <td mat-cell *matCellDef="let element"> <img style="width:3rem;" src={{element.image}} alt=""></td>
+  </ng-container>
+  
+  <ng-container matColumnDef="Category">
+    <th mat-header-cell *matHeaderCellDef>Category</th>
+    <td mat-cell *matCellDef="let element">{{element.category}}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="Price">
+    <th mat-header-cell *matHeaderCellDef>Price</th>
+    <td mat-cell *matCellDef="let element">{{element.price}}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="Quantity">
+    <th mat-header-cell *matHeaderCellDef>Quantity</th>
+    <td mat-cell *matCellDef="let element">{{element.length}}</td>
+  </ng-container>
+  
+  <ng-container matColumnDef="Total">
+    <th mat-header-cell *matHeaderCellDef>Total</th>
+    <td mat-cell *matCellDef="let element">{{element.total}}</td>
+  </ng-container>
+
+
+
+  <tr mat-header-row *matHeaderRowDef="columndefs"></tr>
+  <tr mat-row *matRowDef="let row; columns: columndefs;"></tr>
+
+</table>
+
+<tr *ngIf="product.length !=0"class="butonat">
+  <td colspan="4"></td>
+  <td ><button mat-raised-button color="warn" class="buttonn" (click)="emptyCart()">Empty cart</button></td>
+  <td><button mat-raised-button color="accent" class="buttonn" routerLink="/products">Shop More</button></td>
+  <td ><button mat-raised-button color="primary" class="buttonn">Check Out</button></td> 
+  <td class="buttonn" ><strong>Grand Total: <span style="color:#00FF00;">${{total}}</span> </strong></td> 
+</tr>
