--- a/src/app/profile/user-products/user-products.component.css
+++ b/src/app/profile/user-products/user-products.component.css
@@ -1,6 +1,3 @@
-.card-img-top{
-    height: 10rem;
-}
 .card-body{
     display: block;
     justify-content: center;
@@ -11,13 +8,26 @@
     padding: 20px;
     margin: 50px;
 }
-.card img {
+.card-title{
+    white-space: nowrap; 
+    width: 190px; 
+    overflow: hidden;
+    text-overflow: ellipsis; 
+}
+.card-text{
+    text-transform: capitalize;
+    white-space: nowrap; 
+    width: 200px; 
+    overflow: hidden;
+    text-overflow: ellipsis; 
+}
+.card-img-top {
     width: 200px;
     height: 200px;
     margin-bottom: 15px;
     transition: 0.3s ease-in-out;
 }
-.card img:hover{
+.card-img-top:hover{
     transition: 0.3s ease-in-out;
     transform: scale(1.0);
 }
