--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -33,12 +33,12 @@
 
   <ng-container matColumnDef="Price">
     <th mat-header-cell *matHeaderCellDef>Price</th>
-    <td mat-cell *matCellDef="let element">{{element.price}}</td>
+    <td mat-cell *matCellDef="let element">${{element.price}}</td>
   </ng-container>
 
   <ng-container matColumnDef="Quantity">
     <th mat-header-cell *matHeaderCellDef>Quantity</th>
-    <td mat-cell *matCellDef="let element">{{element.length}}</td>
+    <td mat-cell *matCellDef="let element">{{element.quantity}}</td>
   </ng-container>
   
   <ng-container matColumnDef="Total">
@@ -58,5 +58,5 @@
   <td ><button mat-raised-button color="warn" class="buttonn" (click)="emptyCart()">Empty cart</button></td>
   <td><button mat-raised-button color="accent" class="buttonn" routerLink="/products">Shop More</button></td>
   <td ><button mat-raised-button color="primary" class="buttonn">Check Out</button></td> 
-  <td class="buttonn" ><strong>Grand Total: <span style="color:#00FF00;">${{total}}</span> </strong></td> 
+  <td class="buttonn" ><strong>Grand Total: <span style="color:#27a927;">${{total}}</span> </strong></td> 
 </tr>
